added docker files, pom and properties